fix sg item rule wrap issue

--- a/src/assets/scss/os/panels/_property-panel.scss
+++ b/src/assets/scss/os/panels/_property-panel.scss
@@ -323,6 +323,9 @@
 
             }
             .rule-list {
+                .rule-item {
+                    height: 32px;
+                }
                 .selection {
                     float: left;
                     width: 31%;
